{{$NEXT}}

0.006     Wed Nov 14 2012 07:10:38 PM CST
- Add option to build source RPM only

0.005     Tue Mar 20 2012 04:19:05 PM CDT
- Skip tests that call rpmbuild if not on system (tired of getting CPAN
  tester fail reports from BSD platforms)

0.004     Mon Mar 19 2012 08:26:00 PM CDT
- Hide test module from PAUSE

0.003     Mon Mar 19 2012 08:18:48 PM CDT
- Fix to sample spec file doc
- Use zilla root as base for spec_file path
- Fixed missing parameter to mk_spec
- Added some basic unit tests

0.002     Wed Mar 14 2012 04:42:10 PM CDT
- Added ignore_build_deps option
- Added dzil mkrpmspec command
- Documentation fixes
- Dependency fixes

0.001     Wed Oct 27 2011  3:57:00 PM CDT
- Initial release